app system_info

--- a/templates/base.html
+++ b/templates/base.html
@@ -141,7 +141,7 @@
     <div class="d-flex justify-content-around">
       <span><a href="#" class="font-weight-bold text-light">UNSE</a></span>
       <span><a href="#" class="font-weight-bold text-light">FCyT</a></span>
-      <span><a href="#" class="font-weight-bold text-light">Tutorial</a></span>
+      <span><a href="{% url 'system_info:bienvenida' %}" class="font-weight-bold text-light">Tutorial</a></span>
       <span><a href="{% url 'gest_votacion:ini-urna' %}" class="font-weight-bold text-light">ini-u / staff</a></span>
     </div>
   </div>
