--- a/apps/system_info/templates/system_info/bienvenida.html
+++ b/apps/system_info/templates/system_info/bienvenida.html
@@ -12,7 +12,7 @@
   <p class="h4">En pocas palabras, <strong>SisElecc</strong> es un proyecto de desarrollo de un prototipo de WebApp para realizar elecciones virtuales.</p>
 </div>
 <div class="row mt-2">
-  <div class="col-4">
+  <div class="col">
     <div class="card">
     <div class="card-header text-center"><strong>Indice</strong></div>
     <div class="card-body">
