--- a/templates/utils/list.html
+++ b/templates/utils/list.html
@@ -45,10 +45,7 @@
 <script>
   $(document).ready(function() {
     $('#data1').DataTable({
-      {
-        %
-        include 'utils/snippets/language_datatables.html' %
-      }
+      {% include 'utils/snippets/language_datatables.html' %}
     });
   });
 </script>
