--- a/apps/gest_cargo/templates/gest_cargo/cargo_detail.html
+++ b/apps/gest_cargo/templates/gest_cargo/cargo_detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block div_card-body %}
 
-<div class="card my-1 text-white " style="background-color: rgb(51, 51, 51); border-color: rgb(51, 51, 51); width: 100%">
+<div class="card my-1 text-white " style="background-color: rgb(51, 51, 51); height: 100%; width: 100%">
   {% if object.editable %}
   <div class="card-header">
     NO SE REGISTRAN ELECCIONES PARA ESTE CARGO
