--- a/apps/system_info/templates/system_info/bienvenida.html
+++ b/apps/system_info/templates/system_info/bienvenida.html
@@ -13,7 +13,7 @@
 </div>
 <div class="row mt-2">
   <div class="col">
-    <div class="card">
+    <div class="card border border-success border-left">
     <div class="card-header text-center"><strong>Indice</strong></div>
     <div class="card-body">
       <ul class="list-group list-group-flush">
