--- a/templates/base.html
+++ b/templates/base.html
@@ -137,13 +137,20 @@
 
   <!-- Footer-->
   {% block footer %}
-  <div class="jumbotron text-center mt-5" style="background-color: rgb(51, 51, 51);">
-    <div class="d-flex justify-content-around">
-      <span><a href="#" class="font-weight-bold text-light">UNSE</a></span>
-      <span><a href="#" class="font-weight-bold text-light">FCyT</a></span>
-      <span><a href="{% url 'system_info:bienvenida' %}" class="font-weight-bold text-light">Tutorial</a></span>
-      <span><a href="{% url 'gest_votacion:ini-urna' %}" class="font-weight-bold text-light">ini-u / staff</a></span>
+  <div class="jumbotron mt-5" style="background-color: rgb(51, 51, 51);">
+    <div class="d-flex justify-content-around text-light">
+      <span><a href="#" class="font-weight-bold text-light">UNSE</a><br>Universidad Nacional de Santiago del Estero</span>
+      <span><a href="#" class="font-weight-bold text-light">FCyT</a><br>Facultad de Ciencias Exactas y Tecnologías</span>
+      <span><a href="{% url 'system_info:bienvenida' %}" class="font-weight-bold text-light">Mas Info</a><br>Informacion del Sistema, tutoriales y documentación</span>
+      <span><a href="{% url 'gest_votacion:ini-urna' %}" class="font-weight-bold text-light">ini-u / staff</a><br>* * * * * *</span>
     </div>
+    <div class="text-right text-light border-top border-light mt-5 pt-2" style="background-color: rgb(51, 51, 51);">
+      <span><b>Contacto </b></span><span style="font-family:monospace;"><i> &lt;usuariodetelegram@gmail.com&gt; </i></span>
+      <br>
+      <span><b>Repositorio del Sistema >></b></span> <a href="https://github.com/chocolatito/siselecc" class="text-light" style="font-family:monospace;">https://github.com/chocolatito/siselecc</a>
+
+    </div>
+
   </div>
   {% endblock %}
   <!-- ./Footer-->
